<resources>
    <string name="app_name">Vibhinna</string>
    <string name="edit">Edit</string>
    <string name="edits">Edit\u0020</string>
    <string name="delete">Delete\u0020</string>
    <string name="description">Multi Boot Manager Free</string>
    <string name="nodata">No fsimages found!!!</string>
    <string name="sysinfo">System Info</string>
    <string name="okay">Okay</string>
    <string name="cancel">Cancel</string>
    <string name="rusure">Are you sure?</string>
    <string name="formating">Formating\u0020</string>
    <string name="cachext3">/cache.img to ext3....</string>
    <string name="dataext3">/data.img to ext3....</string>
    <string name="systemext3">/system.img to ext3....</string>
    <string name="mbnactive">MULTIBOOT not active</string>
    <string name="mbactive">MULTIBOOT active</string>
    <string name="uuidna">UUID\t\t\t\t\t\t: N/A</string>
    <string name="magnum">Magic Number\t\t:\u0020</string>
    <string name="vfsst">VFS State\t\t\t:\u0020</string>
    <string name="freespna">Free Space \t\t\t: N/A</string>
    <string name="freesp">Free Space \t\t\t:\u0020</string>
    <string name="miB">MB/</string>
    <string name="miBf">MB free</string>
    <string name="bcount">Block Count\t\t\t:\u0020</string>
    <string name="fbcount">Free Blocks\t\t\t:\u0020</string>
    <string name="blsiz">Block Size\t\t\t:\u0020</string>
    <string name="mknewfold">Making new folder\u0020</string>
    <string name="creating">Creating\u0020</string>
    <string name="cacheimg">/cache.img....</string>
    <string name="dataimg">/data.img....</string>
    <string name="systemimg">/system.img</string>
    <string name="pdsimg">/pds.img....</string>
    <string name="agree">I agree</string>
    <string name="about">About</string>
    <string name="license">License</string>
    <string name="abouttext">"Multi Boot Manager Free 1.0 for Motorola Defy

Authors
=======
Binoy Babu (royale1223@gmail.com)

Translators
===========
Italian - diamond_lover
Chinese  - dlhxr
Dutch - labsian
Spanish  - Sesme
German - Pottkopp
French - crakeron
Polish - Dawid Rudzik
Brazilian Portugese - pupiloalpha
Hebrew - Elyashiv

Thanks to
=========
m11kkaa for multiboot and advise
Quarx2k for valuable advise and ICS
Epsylon3 for ICS
adamo3957 for testing
XDA forum

Reqirements
===========
1) Rooted Motorola Defy/Defy+/Bravo with 2nd init bootmenu installed
2) Multiboot feature by m11kkaa 0.51

Features
========
* Supports any number of ROMs
* Full support for multiboot 0.51
* Support multiple fsimages
* Create, recycle and format virtual systems.
* Delete, rename and edit description of each entry.
* Shows size of the VFS.
* Much more..

What is this?
=============
A manager for Virtual File Systems (fsimages) in your sdcard.

How to use this?
================
1) First of all a custom ROM should be installed as base. Preferably the latest CM9/CM7 nightly to get the latest 2nd-init bootmenu.
2) Then flash defy_multiboot_v0.5.1.zip by m11kkaa. You can get it from here.
3) Install  MultiBootManagerFree_v1.22_final_royale1223.apk
4) Now open Mult Boot Manager from app drawer. Create new VFS from options. You can see now the new VFS listed. You just created your first VFS.
5) If you need MBM to detect your already existing VFS folders. You have to move them to /mnt/sdcard/multiboot.
6) Instructions for using multiboot 0.51 here, thanks joydeep1985.
7) If you have coming from leodfs multiboot, you have to restart from step 1. I hope you have enough knowledge to figure out which steps to skip.
8) Rest of the options in MultiBootManager are pretty self explanatory. Please make use of the context menu(long click menu).
9) Please report bugs and any features you want. I'm bit busy now but I'll fix/implement them later.
10) This app now works in virtual system also. 
11) This app will work on all GB and ICS ROMs with 2nd init."</string>
    <string name="licensetext">"Licence Agreement
=================

You should read the following terms and conditions before using this software.

YOUR INSTALLATION AND/OR USE OF THIS SOFTWARE INDICATES YOUR ACCEPTANCE OF THIS LICENCE AGREEMENT AND WARRANTY.

You may not alter this software in any way.  

You may not decompile, reverse engineer, disassemble or otherwise reduce this software to a human perceivable form.  You may not modify or rent for profit this software, or create derivative works based upon this software.

You may not publicise or distribute any algorithms or information used by this software without permission of the author/s.

You hereby agree to indemnify, hold harmless, and defend the author(s) from and against any and all liabilities, damages, losses, costs and expenses (including reasonable legal fees) arising from or related to any claim, action, proceeding or allegation that arises or results, either directly or indirectly, from the use and distribution of this software. 

You may terminate this Licence at any time by deleting or destroying the Software, documentation and all copies.  No Licence fee is refundable.  We may terminate this Licence at any time if you are found to be in breach of any of these terms.

Notwithstanding any other provision in this Licence, a person who is not a party to this Licence has no right under the Contracts (Rights of Third Parties) Act 1999 (the "Act") to rely upon or enforce any term of this Licence.  Nothing in this Licence shall affect any right or remedy of a third party which exists or is available apart from that Act.


Copyright Notice
----------------
"Multi Boot Manager Free" is the sole Copyright of Binoy Babu, ©2012 all rights reserved.

"Multi Boot Manager Pro" is the sole Copyright of Binoy Babu, ©2012 all rights reserved.


Warranty Disclaimer
-------------------
THE SOFTWARE IS PROVIDED AS IS WITHOUT WARRANTY OF ANY KIND.TO THE MAXIMUM EXTENT PERMITTED BY APPLICABLE LAW, THE AUTHOR/S FURTHER DISCLAIM ALL WARRANTIES, INCLUDING WITH OUT LIMITATION ANY IMPLIED WARRANTIES OF MERCHANT ABILITY, FITNESS FOR A PARTICULAR PURPOSE, ACCURACY OF INFORMATION AND NON INFRINGEMENT. THE ENTIRE RISK ARISING OUT OF THE USE OR PERFORMANCE OF THIS SOFTWARE AND DOCUMENTATION REMAINS WITH THE RECIPIENT. TO THE MAXIMUM EXTENT PERMITTED BY APPLICABLE LAW, IN NO EVENT SHALL THE AUTHOR/S BE LIABLE FOR ANY CONSEQUENTIAL, INCIDENTAL, DIRECT, INDIRECT, SPECIAL, PUNITIVE OR OTHER DAMAGES OR COSTS WHATSOEVER (INCLUDING, WITH OUT LIMITATION, DAMAGES OR COSTS FOR LOSS OF BUSINESS PROFITS, BUSINESS INTERRUPTION, LOSS OF BUSINESS INFORMATION OR OTHER PECUNIARY LOSS) ARISING OUT OF THIS AGREEMENT OR THE USE OF OR INABILITY TO USE THE SOFTWARE, EVEN IF THE AUTHOR/S OF THE SOFTWARE HAVE BEEN ADVISED OF THE POSSIBILITY OF SUCH DAMAGES. THE AUTHOR/S DO NOT TAKE ANY RESPONSIBILITY AGAINST ANY DAMAGE THIS SOFTWARE MAY DO TO YOUR SYSTEM OR ANOTHER. OUR MAXIMUM AGGREGATE LIABILITY IN RESPECT OF ANY CLAIM OR SERIES OF CLAIMS SHALL BE LIMITED TO THE LICENCE FEE PAID BY YOU, IF ANY, FOR THE SOFTWARE. 

THE SOFTWARE IS NOT WARRANTED TO BE FAULT-TOLERANT, AND IS NOT INTENDED FOR THE DESIGN, CONSTRUCTION, MAINTENANCE, OPERATION, CONTROL, OR ANY OTHER USE IN CONNECTION WITH HIGH RISK SYSTEMS. WE SPECIFICALLY DISCLAIM ANY EXPRESS OR IMPLIED WARRANTY OF FITNESS FOR PURPOSE IN CONNECTION WITH HIGH RISK SYSTEMS.
‘High Risk Systems’ means systems in environments requiring fail-safe performance (such as nuclear facilities, aircraft navigation or communication systems, air traffic control, direct life support machines, storm chasing or weapons systems), in which the failure of the software could lead directly to death, personal injury, or severe physical or environmental damage. You agree that you will not use the software for any purpose in connection with High Risk Systems.

ALTHOUGH the author/s DO NOT WARRANT THAT THE SOFTWARE SUPPLIED HEREUNDER SHALL BE FREE FROM ALL KNOWN VIRUSES WE HAVE USED COMMERCIALLY REASONABLE EFFORTS TO CHECK FOR THE MOST COMMONLY KNOWN VIRUSES. YOU ARE NEVERTHELESS SOLELY RESPONSIBLE FOR VIRUS SCANNING THE SOFTWARE.


Warranty Disclaimer for 3rd Party components
--------------------------------------------
THIS SOFTWARE IS PROVIDED `AS IS' AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL ANY PERSON WHO HAS CONTRIBUTED TO OR IS THE OWNER OF ANY PART OF THIS SOFTWARE BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.


Evaluation and Registration
---------------------------
The following version of "Muli Boot Manager Free" is a Shareware copy. Subject to the terms in this document, you are hereby licensed to use this software without charge.

You are specifically prohibited from distributing the software and/or documentation with other products (commercial or otherwise) with out prior written permission from the author/s.


Acknowledgements
----------------
You acknowledge that you have had the opportunity to evaluate the Software without charge, and that you have satisfied yourself that it meets your requirements in all material respects.It is not technically practicable to guarantee software to be error-free, and you agree that if any such errors are found to exist they shall not constitute a breach of this Licence.

You acknowledge that these terms supersede all prior agreements, and are complete and exclusive. No oral or written information given by the author/s or on our behalf shall create a warranty or collateral contract, or in any way increase the scope of this warranty in any way, and you may not rely on any such advice.

This Licence shall be governed by and construed in accordance with the laws of the Republic of India and the parties hereby submit to the exclusive jurisdiction of the Indian courts in respect of any dispute or matter arising out of or connected with this Licence although the Licensor shall have the right to commence and pursue proceedings in alternative jurisdictions.  In terms of the enforceability of this Licence, the Licence shall be deemed "in writing" and "accepted" by both parties.


Contact
-------
Email: royale1223@gmail.com
Web Site: http://www.ubuntumaster.tk/
"</string>
    <string name="smiB">MB\u0020</string>
    <string name="error">Error\u0020</string>
    <string name="caches">cache: </string>
    <string name="datas">data: </string>
    <string name="systems">system: </string>
    <string name="healthy">healthy</string>
    <string name="shrtdesc">Enter description</string>
    <string name="entername">Enter desired name</string>
    <string name="icon_prompt">Choose an icon</string>
    <string name="cache">Cache</string>
    <string name="data">Data</string>
    <string name="system">System</string>
    <string name="menu_new">New</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_more">More</string>
    <string name="menu_help">Help</string>
    <string name="menu_about">About</string>
    <string name="menu_license">License</string>
    <string name="menu_settings">Settings</string>
</resources>