<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_new"
        android:icon="@drawable/ic_action_add"
        android:showAsAction="always|withText"
        android:title="@string/menu_new"/>
    <item
        android:id="@+id/menu_refresh"
        android:icon="@drawable/ic_action_refresh"
        android:showAsAction="always|withText"
        android:title="@string/menu_refresh"/>
    <item
        android:id="@+id/menu_more"
        android:icon="@drawable/ic_action_help"
        android:showAsAction="always|withText"
        android:title="@string/menu_more">
        <menu>
            <item
                android:id="@+id/menu_settings"
                android:title="@string/menu_settings"/>
            <item
                android:id="@+id/menu_help"
                android:title="@string/menu_help"/>
            <item
                android:id="@+id/menu_about"
                android:title="@string/menu_about"/>
            <item
                android:id="@+id/menu_license"
                android:title="@string/menu_license"/>
        </menu>
    </item>

</menu>